[gd_scene load_steps=17 format=2]

[ext_resource path="res://Images/blank.png" type="Texture" id=1]
[ext_resource path="res://Images/GuruSprites/AnimationSheet_Character.png" type="Texture" id=2]
[ext_resource path="res://Reusable Scenes/dialogue.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/stackTutorial.gd" type="Script" id=4]
[ext_resource path="res://Reusable Scenes/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Font/font_theme.tres" type="Theme" id=6]
[ext_resource path="res://Reusable Scenes/StackPancake.tscn" type="PackedScene" id=7]
[ext_resource path="res://Images/arrow.png" type="Texture" id=8]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 32, 32 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 32, 32 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[sub_resource type="Animation" id=7]
resource_name = "Push4"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimElems/StackPancake4:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimElems/StackPancake4:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 654, 288 ), Vector2( 654, 368 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimElems/TopPointer:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.8, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 526, 408 ), Vector2( 526, 368 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimElems/TopPointer:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimElems/TopPointer/TopLabel:custom_colors/font_color")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimElems/StackPancake:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimElems/StackPancake2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimElems/StackPancake3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimElems:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimElems/TopPointer:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimElems/StackPancake:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 654, 288 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimElems/StackPancake2:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 654, 288 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AnimElems/StackPancake3:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 654, 288 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("AnimElems/TopPointer:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 526, 408 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("AnimElems/StackPancake4:visible")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("AnimElems/StackPancake4:position")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 654, 288 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("AnimElems/TopPointer:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("AnimElems/TopPointer/TopLabel:custom_colors/font_color")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ) ]
}
tracks/13/type = "value"
tracks/13/path = NodePath("dialogue/goback:disabled")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/14/type = "value"
tracks/14/path = NodePath("dialogue/gofront:disabled")
tracks/14/interp = 1
tracks/14/loop_wrap = true
tracks/14/imported = false
tracks/14/enabled = true
tracks/14/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "StackAppear"
length = 4.1
tracks/0/type = "value"
tracks/0/path = NodePath("AnimElems/StackPancake:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimElems/StackPancake2:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimElems/StackPancake3:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AnimElems:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("AnimElems/StackPancake:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.9, 1.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 654, 288 ), Vector2( 654, 488 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("AnimElems/StackPancake2:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 1.9, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 654, 288 ), Vector2( 654, 448 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AnimElems/StackPancake3:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 3, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 654, 288 ), Vector2( 654, 408 ) ]
}
tracks/7/type = "method"
tracks/7/path = NodePath(".")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 4.1 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "change_mouseclick"
}, {
"args": [  ],
"method": "change_mouseclick"
} ]
}

[sub_resource type="Animation" id=6]
resource_name = "TopAppear"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("AnimElems/TopPointer:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimElems/TopPointer:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 392, 408 ), Vector2( 526, 408 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "TopEmph"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimElems/TopPointer:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimElems/TopPointer/TopLabel:custom_colors/font_color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 1, 0, 0, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="stackTutorial" type="Control"]
script = ExtResource( 4 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -100

[node name="TextureRect" type="TextureRect" parent="Background"]
modulate = Color( 0.764706, 0.764706, 0.764706, 1 )
margin_right = 1288.0
margin_bottom = 1024.0
texture = ExtResource( 1 )
expand = true

[node name="Guru" type="Area2D" parent="."]
position = Vector2( 56, 664 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="Guru"]
scale = Vector2( 2.25, 2.25 )
frames = SubResource( 3 )
animation = "idle"
frame = 1
speed_scale = 0.3
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Guru"]

[node name="dialogue" parent="." instance=ExtResource( 3 )]

[node name="stackAnim" type="AnimationPlayer" parent="."]
anims/Push4 = SubResource( 7 )
anims/RESET = SubResource( 5 )
anims/StackAppear = SubResource( 4 )
anims/TopAppear = SubResource( 6 )
anims/TopEmph = SubResource( 8 )

[node name="player" parent="." instance=ExtResource( 5 )]
position = Vector2( 1240, 616 )

[node name="AnimatedSprite" parent="player" index="0"]
flip_h = true

[node name="Camera2D" parent="player" index="2"]
current = false

[node name="gohomeBtn" type="Button" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 114.0
margin_bottom = 64.0
theme = ExtResource( 6 )
text = "Go Home"

[node name="AnimElems" type="CanvasLayer" parent="."]

[node name="StackPancake" parent="AnimElems" instance=ExtResource( 7 )]
position = Vector2( 654, 288 )
collision_layer = 0
collision_mask = 0
number = 1

[node name="StackPancake2" parent="AnimElems" instance=ExtResource( 7 )]
position = Vector2( 654, 288 )
collision_layer = 0
collision_mask = 0
number = 2

[node name="StackPancake3" parent="AnimElems" instance=ExtResource( 7 )]
position = Vector2( 654, 288 )
collision_layer = 0
collision_mask = 0
number = 3

[node name="TopPointer" type="Area2D" parent="AnimElems"]
position = Vector2( 526, 408 )
collision_layer = 0
collision_mask = 0

[node name="Pointer" type="Sprite" parent="AnimElems/TopPointer"]
position = Vector2( 32, 0 )
scale = Vector2( 0.0136364, 0.012963 )
texture = ExtResource( 8 )

[node name="TopLabel" type="Label" parent="AnimElems/TopPointer"]
margin_left = -33.0
margin_top = -10.0
margin_right = 7.0
margin_bottom = 10.0
theme = ExtResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Top"
align = 1
valign = 1

[node name="StackPancake4" parent="AnimElems" instance=ExtResource( 7 )]
position = Vector2( 654, 288 )
number = 4

[connection signal="button_up" from="gohomeBtn" to="." method="_on_gohomeBtn_button_up"]

[editable path="player"]
